# FASER2Tracking

./: .gitmodules  CMakeLists copy.txt  CMakeLists.txt  README.md  setup.sh  test_binding.py
include/: FASER2Geometry.h  MyClass.h  RestrictedBField.h  RootParticleReader.hpp  RootSimHitReader.h  SilentG4.h
python/: bindings.cpp  faser2_truth_tracking.py  faser2_truth_tracking_ckf.py  geometry.py
share/digitization/: FASER2-digitization-smearing-x-z-config.json
share/gdml/: FASER2_only.gdml
share/test_files/: dark_photon_14TeV_m0.3548GeV_c1e-06_to_mu_mu.root
source/: FASER2Geometry.cpp  MyClass.cpp  RestrictedBField.cpp  RootParticleReader.cpp  RootSimHitReader.cpp  TelescopeDetectorElement.cpp  bindings.cpp
